--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/de.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/de.json
@@ -36,8 +36,14 @@
     "MessageKeyUpdated": "Danke. Dein Unterst\u00fctzerschl\u00fcssel wurde aktualisiert.",
     "MessageKeyRemoved": "Danke. Ihr Unterst\u00fctzerschl\u00fcssel wurde entfernt.",
     "ErrorLaunchingChromecast": "W\u00e4hrend des startens von Chromecast ist ein Fehler aufgetreten. Bitte stelle sicher, dass dein Ger\u00e4te mit dem WLAN verbunden ist.",
+    "MessageErrorLoadingSupporterInfo": "Es trat ein Fehler beim laden der Unterst\u00fctzer-Informationen auf. Bitte versuchen Sie es sp\u00e4ter erneut.",
+    "MessageLinkYourSupporterKey": "Verkn\u00fcpfen Sie Ihren Unterst\u00fctzer-Schl\u00fcssel mit bis zu {0} Media Browser Connect Anwendern um Zugriff auf folgende Apps zu erhalten:",
+    "HeaderConfirmRemoveUser": "Entferne Benutzer",
+    "MessageSwipeDownOnRemoteControl": "Welcome to remote control. Swipe down anywhere on this screen to go back to where you came from.",
+    "MessageConfirmRemoveConnectSupporter": "M\u00f6chten Sie wirklich zus\u00e4tzliche Unterst\u00fctzer-Features von diesem Anwender entfernen?",
     "ValueTimeLimitSingleHour": "Zeitlimit: 1 Stunde",
     "ValueTimeLimitMultiHour": "Zeitlimit: {0} Stunden",
+    "HeaderUsers": "Benutzer",
     "PluginCategoryGeneral": "Allgemein",
     "PluginCategoryContentProvider": "Inhaltsanbieter",
     "PluginCategoryScreenSaver": "Bildschirmschoner",
@@ -117,7 +123,6 @@
     "HeaderSelectSubtitles": "W\u00f6hle Untertitel",
     "ButtonMarkForRemoval": "Entferne von Ger\u00e4t",
     "ButtonUnmarkForRemoval": "Abbrechen von Entfernen von Ger\u00e4t",
-    "LabelSyncQualityHelp": "Select the desired quality. Original quality will sync the original file, regardless of whether the device is capable of playing it or not.",
     "LabelDefaultStream": "(Default)",
     "LabelForcedStream": "(Erzwungen)",
     "LabelDefaultForcedStream": "(Standard\/Erzwungen)",
@@ -721,10 +726,6 @@
     "LabelSyncTo": "Synchronisiere mit:",
     "LabelSyncJobName": "Synchronisations-Aufgabe:",
     "LabelQuality": "Qualit\u00e4t:",
-    "OptionOriginal": "Original",
-    "OptionHigh": "Hoch",
-    "OptionMedium": "Mittel",
-    "OptionLow": "Niedrig",
     "HeaderSettings": "Einstellungen",
     "OptionAutomaticallySyncNewContent": "Synchronisiere neue Inhalte automatisch",
     "OptionAutomaticallySyncNewContentHelp": "Neue Inhalte dieser Kategorie werden automatisch mit dem Ger\u00e4t synchronisiert.",
@@ -741,5 +742,7 @@
     "SyncJobItemStatusSynced": "Synchronisiert",
     "SyncJobItemStatusFailed": "Fehlgeschlagen.",
     "SyncJobItemStatusRemovedFromDevice": "Entfernt von Ger\u00e4t",
-    "SyncJobItemStatusCancelled": "Abgebrochen"
+    "SyncJobItemStatusCancelled": "Abgebrochen",
+    "LabelProfile": "Profil:",
+    "LabelBitrateMbps": "Datenrate (Mbps):"
 }
