--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/fr.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/fr.json
@@ -36,8 +36,14 @@
     "MessageKeyUpdated": "Merci. Votre cl\u00e9 de supporteur a \u00e9t\u00e9 mise \u00e0 jour.",
     "MessageKeyRemoved": "Merci. Votre cl\u00e9 de supporteur a \u00e9t\u00e9 supprim\u00e9e.",
     "ErrorLaunchingChromecast": "Une erreur a \u00e9t\u00e9 rencontr\u00e9e lors du lancement de Chromecast. Veuillez vous assurer que votre appareil est bien connect\u00e9 \u00e0 votre r\u00e9seau sans-fil.",
+    "MessageErrorLoadingSupporterInfo": "Il y a eu une erreur lors du chargement des informations de supporter. Veuillez r\u00e9essayer plus tard.",
+    "MessageLinkYourSupporterKey": "Liez votre cl\u00e9 de supporteur avec {0} utilisateurs de Media Browser Connect au maximum et profitez d'un acc\u00e8s gratuit aux applications suivantes :",
+    "HeaderConfirmRemoveUser": "Supprimer l'utilisateur",
+    "MessageSwipeDownOnRemoteControl": "Welcome to remote control. Swipe down anywhere on this screen to go back to where you came from.",
+    "MessageConfirmRemoveConnectSupporter": "Etes-vous s\u00fbr de vouloir supprimer les avantages additionnels de supporteur pour cet utilisateur ?",
     "ValueTimeLimitSingleHour": "Limite de temps : 1 heure",
     "ValueTimeLimitMultiHour": "Limite de temps : {0} heures",
+    "HeaderUsers": "Utilisateurs",
     "PluginCategoryGeneral": "G\u00e9n\u00e9ral",
     "PluginCategoryContentProvider": "Fournisseurs de contenus",
     "PluginCategoryScreenSaver": "Ecrans de veille",
@@ -117,7 +123,6 @@
     "HeaderSelectSubtitles": "S\u00e9lectionner sous-titres",
     "ButtonMarkForRemoval": "Supprimer de l'appareil",
     "ButtonUnmarkForRemoval": "Annuler la suppression de l'appareil",
-    "LabelSyncQualityHelp": "Select the desired quality. Original quality will sync the original file, regardless of whether the device is capable of playing it or not.",
     "LabelDefaultStream": "(Par d\u00e9faut)",
     "LabelForcedStream": "(Forc\u00e9)",
     "LabelDefaultForcedStream": "(Par d\u00e9faut\/Forc\u00e9)",
@@ -721,10 +726,6 @@
     "LabelSyncTo": "Synchronis\u00e9 avec:",
     "LabelSyncJobName": "Nom du job de synchronisation:",
     "LabelQuality": "Qualit\u00e9:",
-    "OptionOriginal": "Original",
-    "OptionHigh": "Haute",
-    "OptionMedium": "Moyenne",
-    "OptionLow": "Basse",
     "HeaderSettings": "Param\u00e8tres",
     "OptionAutomaticallySyncNewContent": "Synchroniser automatiquement le nouveau contenu",
     "OptionAutomaticallySyncNewContentHelp": "Les nouveaux contenus ajout\u00e9s \u00e0 cette cat\u00e9gorie seront automatiquement synchronis\u00e9s avec le p\u00e9riph\u00e9rique.",
@@ -741,5 +742,7 @@
     "SyncJobItemStatusSynced": "Synchronis\u00e9",
     "SyncJobItemStatusFailed": "Echou\u00e9",
     "SyncJobItemStatusRemovedFromDevice": "Supprim\u00e9 de l'appareil",
-    "SyncJobItemStatusCancelled": "Annul\u00e9"
+    "SyncJobItemStatusCancelled": "Annul\u00e9",
+    "LabelProfile": "Profil :",
+    "LabelBitrateMbps": "D\u00e9bit (Mbps) :"
 }
