--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/it.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/it.json
@@ -36,8 +36,14 @@
     "MessageKeyUpdated": "Grazie. La vostra chiave supporter \u00e8 stato aggiornato.",
     "MessageKeyRemoved": "Grazie. La vostra chiave supporter \u00e8 stata rimossa.",
     "ErrorLaunchingChromecast": "Si \u00e8 verificato un errore all'avvio di chromecast. Assicurati che il tuo dispositivo sia connesso alla rete wireless.",
+    "MessageErrorLoadingSupporterInfo": "There was an error loading supporter information. Please try again later.",
+    "MessageLinkYourSupporterKey": "Link your supporter key with up to {0} Media Browser Connect members to enjoy free access to the following apps:",
+    "HeaderConfirmRemoveUser": "Remove User",
+    "MessageSwipeDownOnRemoteControl": "Welcome to remote control. Swipe down anywhere on this screen to go back to where you came from.",
+    "MessageConfirmRemoveConnectSupporter": "Are you sure you wish to remove additional supporter benefits from this user?",
     "ValueTimeLimitSingleHour": "Tempo limite: 1 ora",
     "ValueTimeLimitMultiHour": "Tempo limite: {0} ore",
+    "HeaderUsers": "Utenti",
     "PluginCategoryGeneral": "Generale",
     "PluginCategoryContentProvider": "Fornitori di contenuti",
     "PluginCategoryScreenSaver": "Salva schermo",
@@ -117,7 +123,6 @@
     "HeaderSelectSubtitles": "Seleziona sottotitoli",
     "ButtonMarkForRemoval": "Rimuovi dal dispositivo",
     "ButtonUnmarkForRemoval": "Annulla rimozione dal dispositivo",
-    "LabelSyncQualityHelp": "Select the desired quality. Original quality will sync the original file, regardless of whether the device is capable of playing it or not.",
     "LabelDefaultStream": "(Predefinito)",
     "LabelForcedStream": "(forzato)",
     "LabelDefaultForcedStream": "(Predefinito\/Forzato)",
@@ -721,10 +726,6 @@
     "LabelSyncTo": "Sincronizza su:",
     "LabelSyncJobName": "Nome Attivit\u00e0 di Sincroniz.:",
     "LabelQuality": "Qualit\u00e0:",
-    "OptionOriginal": "Originale",
-    "OptionHigh": "Alto",
-    "OptionMedium": "Medio",
-    "OptionLow": "Basso",
     "HeaderSettings": "Configurazione",
     "OptionAutomaticallySyncNewContent": "Sincronizza automaticamente nuovi contenuti",
     "OptionAutomaticallySyncNewContentHelp": "Nuovi contenuti aggiunti a questa categoria viene sincronizzata automaticamente al dispositivo.",
@@ -741,5 +742,7 @@
     "SyncJobItemStatusSynced": "Sincronizzato",
     "SyncJobItemStatusFailed": "Fallito",
     "SyncJobItemStatusRemovedFromDevice": "Rimosso dal dispositivo",
-    "SyncJobItemStatusCancelled": "Cancellato"
+    "SyncJobItemStatusCancelled": "Cancellato",
+    "LabelProfile": "Profile:",
+    "LabelBitrateMbps": "Bitrate (Mbps):"
 }
