--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/nb.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/nb.json
@@ -36,8 +36,14 @@
     "MessageKeyUpdated": "Takk. Din supportern\u00f8kkel har blitt oppdatert.",
     "MessageKeyRemoved": "Takk. Din supportern\u00f8kkel har blitt fjernet.",
     "ErrorLaunchingChromecast": "Det var en feil ved start av Chromecast. Vennligst forsikre deg om at enheten har korrekt forbindelse til ditt tr\u00e5dl\u00f8se nettverk.",
+    "MessageErrorLoadingSupporterInfo": "There was an error loading supporter information. Please try again later.",
+    "MessageLinkYourSupporterKey": "Link your supporter key with up to {0} Media Browser Connect members to enjoy free access to the following apps:",
+    "HeaderConfirmRemoveUser": "Remove User",
+    "MessageSwipeDownOnRemoteControl": "Welcome to remote control. Swipe down anywhere on this screen to go back to where you came from.",
+    "MessageConfirmRemoveConnectSupporter": "Are you sure you wish to remove additional supporter benefits from this user?",
     "ValueTimeLimitSingleHour": "Time limit: 1 hour",
     "ValueTimeLimitMultiHour": "Time limit: {0} hours",
+    "HeaderUsers": "Brukere",
     "PluginCategoryGeneral": "General",
     "PluginCategoryContentProvider": "Content Providers",
     "PluginCategoryScreenSaver": "Screen Savers",
@@ -117,7 +123,6 @@
     "HeaderSelectSubtitles": "Velg Undertekst",
     "ButtonMarkForRemoval": "Fjern fra enheten.",
     "ButtonUnmarkForRemoval": "Avbryt fjerning fra enheten",
-    "LabelSyncQualityHelp": "Select the desired quality. Original quality will sync the original file, regardless of whether the device is capable of playing it or not.",
     "LabelDefaultStream": "(Standard)",
     "LabelForcedStream": "(Tvunget)",
     "LabelDefaultForcedStream": "(Standard\/Tvunget)",
@@ -721,10 +726,6 @@
     "LabelSyncTo": "Synkroniser til:",
     "LabelSyncJobName": "Navn p\u00e5 synkroniseringsjobb:",
     "LabelQuality": "Kvalitet:",
-    "OptionOriginal": "Original",
-    "OptionHigh": "H\u00f8y",
-    "OptionMedium": "Medium",
-    "OptionLow": "Lav",
     "HeaderSettings": "Innstillinger",
     "OptionAutomaticallySyncNewContent": "Automatisk synkroniser nytt innhold",
     "OptionAutomaticallySyncNewContentHelp": "Nytt innhold lagt til i denne kategorien vil bli automatisk synkronisert til enheten.",
@@ -741,5 +742,7 @@
     "SyncJobItemStatusSynced": "Synkronisert",
     "SyncJobItemStatusFailed": "Feilet",
     "SyncJobItemStatusRemovedFromDevice": "Fjernet fra enheten",
-    "SyncJobItemStatusCancelled": "Kansellert"
+    "SyncJobItemStatusCancelled": "Kansellert",
+    "LabelProfile": "Profile:",
+    "LabelBitrateMbps": "Bitrate (Mbps):"
 }
