--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/nl.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/nl.json
@@ -36,8 +36,14 @@
     "MessageKeyUpdated": "Dank u. Uw supporter sleutel is bijgewerkt.",
     "MessageKeyRemoved": "Dank u. Uw supporter sleutel is verwijderd.",
     "ErrorLaunchingChromecast": "Er is een fout opgetreden bij het starten van chromecast. Zorg ervoor dat uw apparaat is aangesloten op uw draadloze netwerk.",
+    "MessageErrorLoadingSupporterInfo": "There was an error loading supporter information. Please try again later.",
+    "MessageLinkYourSupporterKey": "Link your supporter key with up to {0} Media Browser Connect members to enjoy free access to the following apps:",
+    "HeaderConfirmRemoveUser": "Remove User",
+    "MessageSwipeDownOnRemoteControl": "Welcome to remote control. Swipe down anywhere on this screen to go back to where you came from.",
+    "MessageConfirmRemoveConnectSupporter": "Are you sure you wish to remove additional supporter benefits from this user?",
     "ValueTimeLimitSingleHour": "Tijdslimiet: 1 uur",
     "ValueTimeLimitMultiHour": "Tijdslimiet: {0} uren",
+    "HeaderUsers": "Gebruikers",
     "PluginCategoryGeneral": "General",
     "PluginCategoryContentProvider": "Content Providers",
     "PluginCategoryScreenSaver": "Screen Savers",
@@ -117,7 +123,6 @@
     "HeaderSelectSubtitles": "Selecteer Ondertitels",
     "ButtonMarkForRemoval": "Van apparaat verwijderen",
     "ButtonUnmarkForRemoval": "Afbreken verwijderen van apparaat",
-    "LabelSyncQualityHelp": "Select the desired quality. Original quality will sync the original file, regardless of whether the device is capable of playing it or not.",
     "LabelDefaultStream": "(Standaard)",
     "LabelForcedStream": "(Geforceerd)",
     "LabelDefaultForcedStream": "(Standaard \/ Georceerd)",
@@ -721,10 +726,6 @@
     "LabelSyncTo": "Synchroniseer naar:",
     "LabelSyncJobName": "Naam synchroniseer taak:",
     "LabelQuality": "Kwaliteit",
-    "OptionOriginal": "Origineel",
-    "OptionHigh": "Hoog",
-    "OptionMedium": "Gemiddeld",
-    "OptionLow": "Laag",
     "HeaderSettings": "Instellingen",
     "OptionAutomaticallySyncNewContent": "Nieuwe inhoud automatisch synchroniseren",
     "OptionAutomaticallySyncNewContentHelp": "Nieuwe inhoud toegevoegd aan deze categorie wordt automatisch gesynchroniseerd met het apparaat.",
@@ -741,5 +742,7 @@
     "SyncJobItemStatusSynced": "Gesynchroniseerd",
     "SyncJobItemStatusFailed": "Mislukt",
     "SyncJobItemStatusRemovedFromDevice": "Van apparaat verwijderd",
-    "SyncJobItemStatusCancelled": "Geannuleerd"
+    "SyncJobItemStatusCancelled": "Geannuleerd",
+    "LabelProfile": "Profile:",
+    "LabelBitrateMbps": "Bitrate (Mbps):"
 }
