--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/sv.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/sv.json
@@ -36,8 +36,14 @@
     "MessageKeyUpdated": "Tack. Din donationskod har uppdaterats.",
     "MessageKeyRemoved": "Tack. Din donationskod har raderats.",
     "ErrorLaunchingChromecast": "Det gick inte att starta Chromecast. Kontrollera att enheten \u00e4r ansluten till det tr\u00e5dl\u00f6sa n\u00e4tverket.",
+    "MessageErrorLoadingSupporterInfo": "There was an error loading supporter information. Please try again later.",
+    "MessageLinkYourSupporterKey": "Link your supporter key with up to {0} Media Browser Connect members to enjoy free access to the following apps:",
+    "HeaderConfirmRemoveUser": "Remove User",
+    "MessageSwipeDownOnRemoteControl": "Welcome to remote control. Swipe down anywhere on this screen to go back to where you came from.",
+    "MessageConfirmRemoveConnectSupporter": "Are you sure you wish to remove additional supporter benefits from this user?",
     "ValueTimeLimitSingleHour": "Time limit: 1 hour",
     "ValueTimeLimitMultiHour": "Time limit: {0} hours",
+    "HeaderUsers": "Anv\u00e4ndare",
     "PluginCategoryGeneral": "General",
     "PluginCategoryContentProvider": "Content Providers",
     "PluginCategoryScreenSaver": "Screen Savers",
@@ -117,7 +123,6 @@
     "HeaderSelectSubtitles": "V\u00e4lj undertexter",
     "ButtonMarkForRemoval": "Remove from device",
     "ButtonUnmarkForRemoval": "Cancel removal from device",
-    "LabelSyncQualityHelp": "Select the desired quality. Original quality will sync the original file, regardless of whether the device is capable of playing it or not.",
     "LabelDefaultStream": "(f\u00f6rvalda)",
     "LabelForcedStream": "(tvingade)",
     "LabelDefaultForcedStream": "(f\u00f6rvalda\/tvingade)",
@@ -721,10 +726,6 @@
     "LabelSyncTo": "Sync to:",
     "LabelSyncJobName": "Sync job name:",
     "LabelQuality": "Quality:",
-    "OptionOriginal": "Original",
-    "OptionHigh": "High",
-    "OptionMedium": "Medium",
-    "OptionLow": "Low",
     "HeaderSettings": "Settings",
     "OptionAutomaticallySyncNewContent": "Synkronisera automatiskt nytt inneh\u00e5ll",
     "OptionAutomaticallySyncNewContentHelp": "Nytt inneh\u00e5ll som l\u00e4ggs till i denna kategori kommer automatiskt synkroniseras till enheten.",
@@ -741,5 +742,7 @@
     "SyncJobItemStatusSynced": "Synkad",
     "SyncJobItemStatusFailed": "Misslyckades",
     "SyncJobItemStatusRemovedFromDevice": "Borttagen fr\u00e5n enhet",
-    "SyncJobItemStatusCancelled": "Avbruten"
+    "SyncJobItemStatusCancelled": "Avbruten",
+    "LabelProfile": "Profile:",
+    "LabelBitrateMbps": "Bitrate (Mbps):"
 }
