--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/es_MX.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/es_MX.json
@@ -36,8 +36,14 @@
     "MessageKeyUpdated": "Gracias. Su clave de aficionado ha sido actualizada.",
     "MessageKeyRemoved": "Gracias. Su clave de aficionado ha sido eliminada.",
     "ErrorLaunchingChromecast": "Hubo un error iniciando chromecast. Por favor aseg\u00farate de que tu dispositivo este conectado a tu red inalambrica",
+    "MessageErrorLoadingSupporterInfo": "Se present\u00f3 un error al cargar la informaci\u00f3n del aficionado. Por favor int\u00e9ntelo m\u00e1s tarde.",
+    "MessageLinkYourSupporterKey": "Ligue su clave de aficionado con hasta {0} miembros de Media Browser Connect para disfrutar de acceso gratuito a las siguientes apps:",
+    "HeaderConfirmRemoveUser": "Eliminar Usuario",
+    "MessageSwipeDownOnRemoteControl": "Welcome to remote control. Swipe down anywhere on this screen to go back to where you came from.",
+    "MessageConfirmRemoveConnectSupporter": "\u00bfEst\u00e1 seguro de querer eliminar los beneficios adicionales de aficionado de este usuario?",
     "ValueTimeLimitSingleHour": "L\u00edmite de tiempo: 1 hora",
     "ValueTimeLimitMultiHour": "L\u00edmite de tiempo: {0} horas",
+    "HeaderUsers": "Usuarios",
     "PluginCategoryGeneral": "General",
     "PluginCategoryContentProvider": "Proveedores de Contenido",
     "PluginCategoryScreenSaver": "Protectores de Pantalla",
@@ -117,7 +123,6 @@
     "HeaderSelectSubtitles": "Seleccionar Subtitulos",
     "ButtonMarkForRemoval": "Remover de dispositivo",
     "ButtonUnmarkForRemoval": "Cancelar remover de dispositivo",
-    "LabelSyncQualityHelp": "Select the desired quality. Original quality will sync the original file, regardless of whether the device is capable of playing it or not.",
     "LabelDefaultStream": "(Por defecto)",
     "LabelForcedStream": "(Forzado)",
     "LabelDefaultForcedStream": "(Por Defecto\/Forzado)",
@@ -577,7 +582,7 @@
     "ValuePremieres": "Estrenos: {0}",
     "ValueStudio": "Estudio: {0}",
     "ValueStudios": "Estudios: {0}",
-    "ValueStatus": "Status: {0}",
+    "ValueStatus": "Estado: {0}",
     "ValueSpecialEpisodeName": "Especial: {0}",
     "LabelLimit": "L\u00edmite:",
     "ValueLinks": "Enlaces: {0}",
@@ -714,17 +719,13 @@
     "ButtonSync": "SInc",
     "SyncMedia": "Sincronizar Medios",
     "HeaderCancelSyncJob": "Cancelar Sinc.",
-    "CancelSyncJobConfirmation": "Cancelling the sync job will remove synced media from the device during the next sync process. Are you sure you wish to proceed?",
+    "CancelSyncJobConfirmation": "Cancelando el trabajo de sincronizaci\u00f3n eliminara los medios sincronizados del dispositivo durante el pr\u00f3ximo proceso de sincronizaci\u00f3n. \u00bfEsta seguro de que desea continuar?",
     "TabSync": "Sinc",
     "MessagePleaseSelectDeviceToSyncTo": "Por favor seleccione un dispositivo con el que desea sincronizar.",
     "MessageSyncJobCreated": "Trabajo de sinc. creado.",
     "LabelSyncTo": "Sincronizar con:",
     "LabelSyncJobName": "Nombre del trabajo de sinc:",
     "LabelQuality": "Calidad:",
-    "OptionOriginal": "Original",
-    "OptionHigh": "Alta",
-    "OptionMedium": "Media",
-    "OptionLow": "Baja",
     "HeaderSettings": "Configuraci\u00f3n",
     "OptionAutomaticallySyncNewContent": "Sincronizar autom\u00e1ticamente nuevos contenidos",
     "OptionAutomaticallySyncNewContentHelp": "Los contenidos nuevos agregados a esta categor\u00eda ser\u00e1n sincronizados autom\u00e1ticamente con el dispositivo.",
@@ -741,5 +742,7 @@
     "SyncJobItemStatusSynced": "Sincronizado",
     "SyncJobItemStatusFailed": "Fall\u00f3",
     "SyncJobItemStatusRemovedFromDevice": "Eliminado del dispositivo",
-    "SyncJobItemStatusCancelled": "Cancelado"
+    "SyncJobItemStatusCancelled": "Cancelado",
+    "LabelProfile": "Perf\u00edl:",
+    "LabelBitrateMbps": "Tasa de bits (Mbps):"
 }
