--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/pt_BR.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/pt_BR.json
@@ -36,8 +36,14 @@
     "MessageKeyUpdated": "Obrigado. Sua chave de colaborador foi atualizada.",
     "MessageKeyRemoved": "Obrigado. Sua chave de colaborador foi removida.",
     "ErrorLaunchingChromecast": "Ocorreu um erro ao iniciar o chromecast. Por favor verifique se seu dispositivo est\u00e1 conectado \u00e0 sua rede sem fio.",
+    "MessageErrorLoadingSupporterInfo": "Ocorreu um erro ao carregar a informa\u00e7\u00e3o do colaborador. Por favor, tente novamente mais tarde.",
+    "MessageLinkYourSupporterKey": "Conecte sua chave de colaborador com at\u00e9 {0} membros do Media Browser Connect para desfrutar de acesso livre \u00e0s seguintes apps:",
+    "HeaderConfirmRemoveUser": "Remover Usu\u00e1rio",
+    "MessageSwipeDownOnRemoteControl": "Welcome to remote control. Swipe down anywhere on this screen to go back to where you came from.",
+    "MessageConfirmRemoveConnectSupporter": "Deseja realmente remover os benef\u00edcios adicionais de colaborador deste usu\u00e1rio?",
     "ValueTimeLimitSingleHour": "Limite de tempo: 1 hora",
     "ValueTimeLimitMultiHour": "Limite de tempo: {0} horas",
+    "HeaderUsers": "Usu\u00e1rios",
     "PluginCategoryGeneral": "Geral",
     "PluginCategoryContentProvider": "Provedores de Conte\u00fado",
     "PluginCategoryScreenSaver": "Protetores de Tela",
@@ -117,7 +123,6 @@
     "HeaderSelectSubtitles": "Selecione Legendas",
     "ButtonMarkForRemoval": "Remover do dispositivo",
     "ButtonUnmarkForRemoval": "Cancelar remo\u00e7\u00e3o do dispositivo",
-    "LabelSyncQualityHelp": "Selecione a qualidade desejada. Qualidade original sincronizar\u00e1 o arquivo original, independente se o dispositivo ser\u00e1 capaz de reproduzi-lo.",
     "LabelDefaultStream": "(Padr\u00e3o)",
     "LabelForcedStream": "(For\u00e7ada)",
     "LabelDefaultForcedStream": "(Padr\u00e3o\/For\u00e7ada)",
@@ -721,10 +726,6 @@
     "LabelSyncTo": "Sincronizar para:",
     "LabelSyncJobName": "Nome da tarefa de sincroniza\u00e7\u00e3o:",
     "LabelQuality": "Qualidade:",
-    "OptionOriginal": "Original",
-    "OptionHigh": "Alta",
-    "OptionMedium": "M\u00e9dia",
-    "OptionLow": "Baixa",
     "HeaderSettings": "Ajustes",
     "OptionAutomaticallySyncNewContent": "Sincronizar novo conte\u00fado automaticamente",
     "OptionAutomaticallySyncNewContentHelp": "Novo conte\u00fado adicionado a esta categoria ser\u00e1 automaticamente sincronizado com o dispositivo.",
@@ -741,5 +742,7 @@
     "SyncJobItemStatusSynced": "Sincronizado",
     "SyncJobItemStatusFailed": "Falhou",
     "SyncJobItemStatusRemovedFromDevice": "Removido do dispositivo",
-    "SyncJobItemStatusCancelled": "Cancelado"
+    "SyncJobItemStatusCancelled": "Cancelado",
+    "LabelProfile": "Perfil:",
+    "LabelBitrateMbps": "Taxa (Mbps):"
 }
