--- a/MediaBrowser.Server.Implementations/Localization/Server/server.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/server.json
@@ -16,7 +16,7 @@
     "LabelNext": "Next",
     "LabelYoureDone": "You're Done!",
     "WelcomeToMediaBrowser": "Welcome to Media Browser!",
-    "TitleMediaBrowser": "Media Browser",
+    "TitleMediaBrowser": "Emby",
     "ThisWizardWillGuideYou": "This wizard will help guide you through the setup process. To begin, please select your preferred language.",
     "TellUsAboutYourself": "Tell us about yourself",
     "ButtonQuickStartGuide": "Quick start guide",
