--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/pt_BR.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/pt_BR.json
@@ -39,7 +39,7 @@
     "MessageErrorLoadingSupporterInfo": "Ocorreu um erro ao carregar a informa\u00e7\u00e3o do colaborador. Por favor, tente novamente mais tarde.",
     "MessageLinkYourSupporterKey": "Conecte sua chave de colaborador com at\u00e9 {0} membros do Media Browser Connect para desfrutar de acesso livre \u00e0s seguintes apps:",
     "HeaderConfirmRemoveUser": "Remover Usu\u00e1rio",
-    "MessageSwipeDownOnRemoteControl": "Welcome to remote control. Swipe down anywhere on this screen to go back to where you came from.",
+    "MessageSwipeDownOnRemoteControl": "Bem vindo ao controle remoto. Deslize para baixo em qualquer lugar desta tela para voltar para o local de onde veio anteriormente.",
     "MessageConfirmRemoveConnectSupporter": "Deseja realmente remover os benef\u00edcios adicionais de colaborador deste usu\u00e1rio?",
     "ValueTimeLimitSingleHour": "Limite de tempo: 1 hora",
     "ValueTimeLimitMultiHour": "Limite de tempo: {0} horas",
