--- a/MediaBrowser.Server.Implementations/Localization/Server/pt_BR.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/pt_BR.json
@@ -62,7 +62,7 @@
     "HeaderVideo": "V\u00eddeo",
     "HeaderPaths": "Caminhos",
     "CategorySync": "Sincroniza\u00e7\u00e3o",
-    "TabPlaylist": "Playlist",
+    "TabPlaylist": "Lista de Reprodu\u00e7\u00e3o",
     "HeaderEasyPinCode": "C\u00f3digo de Pin Facil",
     "HeaderGrownupsOnly": "Adultos Apenas!",
     "DividerOr": "-- ou --",
