--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/javascript.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/javascript.json
@@ -7,7 +7,7 @@
     "Password": "Password",
     "DeleteImage": "Delete Image",
     "MessageThankYouForSupporting": "Thank you for supporting Emby.",
-    "MessagePleaseSupportMediaBrowser": "Please support Emby.",
+    "MessagePleaseSupportProject": "Please support Emby.",
     "DeleteImageConfirmation": "Are you sure you wish to delete this image?",
     "FileReadCancelled": "The file read has been canceled.",
     "FileNotFound": "File not found.",
@@ -89,8 +89,8 @@
     "ConfirmMessageScheduledTaskButton": "This operation normally runs automatically as a scheduled task. It can also be run manually here. To configure the scheduled task, see:",
     "HeaderSupporterBenefit": "A supporter membership provides additional benefits such as access to sync, premium plugins, internet channel content, and more. {0}Learn more{1}.",
     "LabelSyncNoTargetsHelp": "It looks like you don't currently have any apps that support sync.",
-    "HeaderWelcomeToMediaBrowserServerDashboard": "Welcome to the Emby Server Dashboard",
-    "HeaderWelcomeToMediaBrowserWebClient": "Welcome to the Emby Web Client",
+    "HeaderWelcomeToProjectServerDashboard": "Welcome to the Emby Server Dashboard",
+    "HeaderWelcomeToProjectWebClient": "Welcome to the Emby Web Client",
     "ButtonTakeTheTour": "Take the tour",
     "HeaderWelcomeBack": "Welcome back!",
     "TitleSync": "Sync",
@@ -538,12 +538,12 @@
     "MessageYouHaveALifetimeMembership": "You have a lifetime supporter membership. You can provide additional donations on a one-time or recurring basis using the options below. Thank you for supporting Emby.",
     "MessageYouHaveAnActiveRecurringMembership": "You have an active {0} membership. You can upgrade your plan using the options below.",
     "ButtonDelete": "Delete",
-    "HeaderMediaBrowserAccountAdded": "Emby Account Added",
-    "MessageMediaBrowserAccountAdded": "The Emby account has been added to this user.",
-    "MessagePendingMediaBrowserAccountAdded": "The Emby account has been added to this user. An email will be sent to the owner of the account. The invitation will need to be confirmed by clicking a link within the email.",
-    "HeaderMediaBrowserAccountRemoved": "Emby Account Removed",
-    "MessageMediaBrowserAccontRemoved": "The Emby account has been removed from this user.",
-    "TooltipLinkedToMediaBrowserConnect": "Linked to Emby Connect",
+    "HeaderEmbyAccountAdded": "Emby Account Added",
+    "MessageEmbyAccountAdded": "The Emby account has been added to this user.",
+    "MessagePendingEmbyAccountAdded": "The Emby account has been added to this user. An email will be sent to the owner of the account. The invitation will need to be confirmed by clicking a link within the email.",
+    "HeaderEmbyAccountRemoved": "Emby Account Removed",
+    "MessageEmbyAccontRemoved": "The Emby account has been removed from this user.",
+    "TooltipLinkedToEmbyConnect": "Linked to Emby Connect",
     "HeaderUnrated": "Unrated",
     "ValueDiscNumber": "Disc {0}",
     "HeaderUnknownDate": "Unknown Date",
@@ -724,7 +724,7 @@
     "MessageInvalidForgotPasswordPin": "An invalid or expired pin was entered. Please try again.",
     "MessagePasswordResetForUsers": "Passwords have been removed for the following users:",
     "HeaderInviteGuest": "Invite Guest",
-    "ButtonLinkMyMediaBrowserAccount": "Link my account now",
+    "ButtonLinkMyEmbyAccount": "Link my account now",
     "MessageConnectAccountRequiredToInviteGuest": "In order to invite guests you need to first link your Emby account to this server.",
     "ButtonSync": "Sync",
     "SyncMedia": "Sync Media",
