--- a/MediaBrowser.Server.Implementations/Localization/Server/server.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/server.json
@@ -7,7 +7,7 @@
     "LabelApiDocumentation": "Api Documentation",
     "LabelDeveloperResources": "Developer Resources",
     "LabelBrowseLibrary": "Browse Library",
-    "LabelConfigureMediaBrowser": "Configure Emby",
+    "LabelConfigureServer": "Configure Emby",
     "LabelOpenLibraryViewer": "Open Library Viewer",
     "LabelRestartServer": "Restart Server",
     "LabelShowLogWindow": "Show Log Window",
@@ -15,8 +15,7 @@
     "LabelFinish": "Finish",
     "LabelNext": "Next",
     "LabelYoureDone": "You're Done!",
-    "WelcomeToMediaBrowser": "Welcome to Emby!",
-    "TitleMediaBrowser": "Emby",
+    "WelcomeToProject": "Welcome to Emby!",
     "ThisWizardWillGuideYou": "This wizard will help guide you through the setup process. To begin, please select your preferred language.",
     "TellUsAboutYourself": "Tell us about yourself",
     "ButtonQuickStartGuide": "Quick start guide",
@@ -48,7 +47,7 @@
     "LabelDashboardSourcePathHelp": "If running the server from source, specify the path to the dashboard-ui folder. All web client files will be served from this location.",
     "ButtonConvertMedia": "Convert media",
     "ButtonOrganize": "Organize",
-    "LinkedToMediaBrowserConnect": "Linked to Emby Connect",
+    "LinkedToEmbyConnect": "Linked to Emby Connect",
     "HeaderSupporterBenefits": "Supporter Benefits",
     "HeaderAddUser": "Add User",
     "LabelAddConnectSupporterHelp": "To add a user who isn't listed, you'll need to first link their account to Emby Connect from their user profile page.",
@@ -289,12 +288,12 @@
     "TabAbout": "About",
     "TabSupporterKey": "Supporter Key",
     "TabBecomeSupporter": "Become a Supporter",
-    "MediaBrowserHasCommunity": "Emby has a thriving community of users and contributors.",
+    "ProjectHasCommunity": "Emby has a thriving community of users and contributors.",
     "CheckoutKnowledgeBase": "Check out our knowledge base to help you get the most out of Emby.",
     "SearchKnowledgeBase": "Search the Knowledge Base",
     "VisitTheCommunity": "Visit the Community",
-    "VisitMediaBrowserWebsite": "Visit the Emby Web Site",
-    "VisitMediaBrowserWebsiteLong": "Visit the Emby Web site to catch the latest news and keep up with the developer blog.",
+    "VisitProjectWebsite": "Visit the Emby Web Site",
+    "VisitProjectWebsiteLong": "Visit the Emby Web site to catch the latest news and keep up with the developer blog.",
     "OptionHideUser": "Hide this user from login screens",
     "OptionHideUserFromLoginHelp": "Useful for private or hidden administrator accounts. The user will need to sign in manually by entering their username and password.",
     "OptionDisableUser": "Disable this user",
@@ -617,7 +616,7 @@
     "OptionMove": "Move",
     "LabelTransferMethodHelp": "Copy or move files from the watch folder",
     "HeaderLatestNews": "Latest News",
-    "HeaderHelpImproveMediaBrowser": "Help Improve Emby",
+    "HeaderHelpImproveProject": "Help Improve Emby",
     "HeaderRunningTasks": "Running Tasks",
     "HeaderActiveDevices": "Active Devices",
     "HeaderPendingInstallations": "Pending Installations",
@@ -861,8 +860,8 @@
     "LabelMessageTitle": "Message title:",
     "MessageNoAvailablePlugins": "No available plugins.",
     "LabelDisplayPluginsFor": "Display plugins for:",
-    "PluginTabMediaBrowserClassic": "MB Classic",
-    "PluginTabMediaBrowserTheater": "MB Theater",
+    "PluginTabAppClassic": "Emby Classic",
+    "PluginTabAppTheater": "Emby Theater",
     "LabelEpisodeNamePlain": "Episode name",
     "LabelSeriesNamePlain": "Series name",
     "ValueSeriesNamePeriod": "Series.name",
@@ -912,7 +911,7 @@
     "OptionDefaultSort": "Default",
     "OptionCommunityMostWatchedSort": "Most Watched",
     "TabNextUp": "Next Up",
-    "HeaderBecomeMediaBrowserSupporter": "Become an Emby Supporter",
+    "HeaderBecomeProjectSupporter": "Become an Emby Supporter",
     "TextEnjoyBonusFeatures": "Enjoy Bonus Features",
     "MessageNoMovieSuggestionsAvailable": "No movie suggestions are currently available. Start watching and rating your movies, and then come back to view your recommendations.",
     "MessageNoCollectionsAvailable": "Collections allow you to enjoy personalized groupings of Movies, Series, Albums, Books and Games. Click the + button to start creating Collections.",
@@ -1268,7 +1267,7 @@
     "LabelConnectGuestUserName": "Their Emby username or email address:",
     "LabelConnectUserName": "Emby username/email:",
     "LabelConnectUserNameHelp": "Connect this user to an Emby account to enable easy sign-in access from any Emby app without having to know the server ip address.",
-    "ButtonLearnMoreAboutMediaBrowserConnect": "Learn more about Emby Connect",
+    "ButtonLearnMoreAboutEmbyConnect": "Learn more about Emby Connect",
     "LabelExternalPlayers": "External players:",
     "LabelExternalPlayersHelp": "Display buttons to play content in external players. This is only available on devices that support url schemes, generally Android and iOS. With external players there is generally no support for remote control or resuming.",
     "HeaderSubtitleProfile": "Subtitle Profile",
@@ -1345,7 +1344,7 @@
     "OptionWeekdays": "Weekdays",
     "OptionWeekends": "Weekends",
     "MessageProfileInfoSynced": "User profile information synced with Emby Connect.",
-    "HeaderOptionalLinkMediaBrowserAccount": "Optional: Link your Emby account",
+    "HeaderOptionalLinkEmbyAccount": "Optional: Link your Emby account",
     "ButtonTrailerReel": "Trailer reel",
     "HeaderTrailerReel": "Trailer Reel",
     "OptionPlayUnwatchedTrailersOnly": "Play only unwatched trailers",
